--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Almost Amazon</h1>
-    <div class='row container'>
+    <div class='row'>
         <div id='store-container' class='col-6'>
         </div>
         <div id='cart-container' class='col-6'>
